--- a/tests/static/home.test.html
+++ b/tests/static/home.test.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
         <link rel="stylesheet" href="https://unpkg.com/jasmine-core@5.2.0/lib/jasmine-core/jasmine.css" />
-        <script src="../helperFunctionsMock.js"></script>
+        <script src="helperFunctionsMock.js"></script>
     </head>
     <body>
         <div id="testarea"></div>
@@ -22,7 +22,7 @@
         <script src="https://unpkg.com/jasmine-core@5.2.0/lib/jasmine-core/jasmine-html.js"></script>
         <script src="https://unpkg.com/jasmine-core@5.2.0/lib/jasmine-core/boot0.js"></script>
         <script src="https://unpkg.com/jasmine-core@5.2.0/lib/jasmine-core/boot1.js"></script>
-        <script src="../../../src/static/movies/home.js"></script>
+        <script src="../../src/static/home.js"></script>
         <script src="home.test.js"></script>
     </body>
 </html>
